--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SunnyMayo!</title>
+    <link href="./resources/index.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
-  <h1>Sunny Mayo</h1>
+  <h1>SunnyMayo</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
